--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mime-types": "^3.0.2",
     "next": "16.1.1",
     "next-auth": "^4.24.13",
+    "qrcode": "^1.5.4",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.69.0",
@@ -40,6 +41,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
+    "@types/qrcode": "^1.5.6",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "dotenv": "^17.2.3",
