--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "clsx": "^2.1.1",
     "form-data": "^4.0.5",
     "lucide-react": "^0.562.0",
+    "mem0ai": "^2.1.38",
     "mime-types": "^3.0.2",
     "next": "16.1.1",
     "next-auth": "^4.24.13",
