--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 version: '3.8'
 
 services:
-  whatsapp-service:
+  whatsapp-server:
     build: ./services/whatsapp
-    container_name: whatsapp_custom_service
+    container_name: waha
     restart: unless-stopped
     ports:
       - "3001:3001"
