--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "form-data": "^4.0.5",
+    "fuse.js": "^7.1.0",
     "lucide-react": "^0.562.0",
     "mem0ai": "^2.1.38",
     "mime-types": "^3.0.2",
