--- a/services/baileys/package.json
+++ b/services/baileys/package.json
@@ -20,6 +20,7 @@
     "devDependencies": {
         "@types/node": "^20.10.0",
         "typescript": "^5.3.2",
-        "ts-node-dev": "^2.0.0"
+        "ts-node-dev": "^2.0.0",
+        "@types/qrcode-terminal": "^0.12.0"
     }
 }
