--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,9 +36,9 @@
     ".next/dev/types/**/*.ts",
     "**/*.mts"
   ],
-  "exclude": [
-    "node_modules",
-    "waha-server",
-    "scripts"
-  ]
+  "node_modules",
+  "waha-server",
+  "scripts",
+  "services"
+]
 }
