fix(config): repair malformed tsconfig.json exclude array

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,9 +36,10 @@
     ".next/dev/types/**/*.ts",
     "**/*.mts"
   ],
-  "node_modules",
-  "waha-server",
-  "scripts",
-  "services"
-]
+  "exclude": [
+    "node_modules",
+    "waha-server",
+    "scripts",
+    "services"
+  ]
 }
