--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@anthropic-ai/sdk": "^0.71.2",
     "@cartesia/cartesia-js": "^2.2.9",
     "@hookform/resolvers": "^5.2.2",
+    "@openrouter/sdk": "^0.3.11",
     "@prisma/client": "^5.22.0",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.15",
