fix: update docker-compose env vars for new security model

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,9 @@ services:
     ports:
       - "3001:3001"
     environment:
-      - WEBHOOK_URL=https://main.die6qcz48fek8.amplifyapp.com/api/webhooks/whatsapp
-      - AUTH_TOKEN=${WAHA_API_KEY:-secret}
+      - WEBHOOK_URL=${WEBHOOK_URL:-https://main.die6qcz48fek8.amplifyapp.com/api/webhooks/whatsapp}
+      - AUTH_TOKEN=${AUTH_TOKEN}
+      - WEBHOOK_SECRET=${WEBHOOK_SECRET}
     extra_hosts:
       - "host.docker.internal:host-gateway"
     volumes:
