--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - "host.docker.internal:host-gateway"
     volumes:
       - ./services/baileys/auth_info_baileys:/app/auth_info_baileys
+      - .:/repo  # Mount the full repo for git operations
 
 
   cron:
