--- a/amplify.yml
+++ b/amplify.yml
@@ -7,6 +7,7 @@ frontend:
     build:
       commands:
         - env | grep -e DB_ -e NEXT_ -e WAHA_ -e AI_ -e ANTHROPIC_ -e VENICE_ -e ELEVENLABS_ -e AUTH_ -e WEBHOOK_ -e DATABASE_ -e DIRECT_ >> .env.production
+        - cat .env.production > .env
         - npx prisma generate
         - npx prisma db push --accept-data-loss
         - npm run build
