--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "lucide-react": "^0.562.0",
     "mem0ai": "^2.1.38",
     "mime-types": "^3.0.2",
+    "music-metadata": "^11.10.5",
     "next": "16.1.1",
     "next-auth": "^4.24.13",
     "pg": "^8.11.3",
