Add centralized logging system with HTTP forwarding - Created log receiver endpoint in Baileys server - Implemented centralized logger with retry logic and trace context - Migrated webhook, processor, and whatsapp.ts to use new logger - Added UI toggle in Admin Settings for easy activation - All logs now centralized in Baileys with traceId correlation

--- a/.env.example
+++ b/.env.example
@@ -38,3 +38,15 @@ DATABASE_URL="file:./dev.db"
 # Only needed if using strict NextAuth
 NEXTAUTH_URL="http://localhost:3005"
 NEXTAUTH_SECRET="change_me_to_random_string"
+
+# ------------------------------
+# Log Forwarding (Optional)
+# ------------------------------
+# Enable forwarding of Amplify logs to Baileys server
+LOG_FORWARDING_ENABLED="false"
+# Endpoint of Baileys server for log ingestion
+BAILEYS_LOG_ENDPOINT="http://your-ec2-ip:3001"
+# Auth token for Baileys server (same as WAHA_API_KEY)
+AUTH_TOKEN="secret"
+# Webhook secret for security
+WEBHOOK_SECRET="your_webhook_secret"
