Fix: Automate WAV conversion for audio messages in Baileys service

--- a/services/baileys/Dockerfile
+++ b/services/baileys/Dockerfile
@@ -3,8 +3,8 @@ FROM node:20-alpine
 WORKDIR /app
 
 # Install system dependencies
-# git is often needed for some npm packages
-RUN apk add --no-cache git && \
+# git is needed for npm packages, ffmpeg for voice conversion
+RUN apk add --no-cache git ffmpeg && \
     git config --global --add safe.directory /repo
 
 COPY package*.json ./
