--- a/services/baileys/package.json
+++ b/services/baileys/package.json
@@ -16,12 +16,14 @@
         "pino-pretty": "^10.2.3",
         "qrcode-terminal": "^0.12.0",
         "dotenv": "^16.3.1",
-        "axios": "^1.6.2"
+        "axios": "^1.6.2",
+        "fluent-ffmpeg": "^2.1.2"
     },
     "devDependencies": {
         "@types/node": "^20.10.0",
         "typescript": "^5.3.2",
         "ts-node-dev": "^2.0.0",
-        "@types/qrcode-terminal": "^0.12.0"
+        "@types/qrcode-terminal": "^0.12.0",
+        "@types/fluent-ffmpeg": "^2.1.24"
     }
 }
