--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "date-fns-tz": "^3.2.0",
     "form-data": "^4.0.5",
     "fuse.js": "^7.1.0",
+    "jspdf": "^4.0.0",
+    "jspdf-autotable": "^5.0.7",
     "lucide-react": "^0.562.0",
     "mem0ai": "^2.1.38",
     "mime-types": "^3.0.2",
