--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,9 +36,10 @@
     ".next/dev/types/**/*.ts",
     "**/*.mts"
   ],
-  "node_modules",
-  "waha-server",
-  "services",
-  "scripts"
-]
+  "exclude": [
+    "node_modules",
+    "waha-server",
+    "services",
+    "scripts"
+  ]
 }
