--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,8 @@
       "@/*": [
         "./*"
       ]
-    }
+    },
+    "baseUrl": "."
   },
   "include": [
     "next-env.d.ts",
@@ -39,7 +40,6 @@
   "exclude": [
     "node_modules",
     "waha-server",
-    "services",
-    "scripts"
+    "services"
   ]
 }
