--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,3 +34,10 @@ services:
       - whatsapp-server
 
   cron:
+    build: ./services/cron
+    container_name: nextjs_cron
+    restart: unless-stopped
+    volumes:
+      - ./services/cron/crontab:/etc/crontabs/root
+    depends_on:
+      - whatsapp-server
