--- a/services/discord/package.json
+++ b/services/discord/package.json
@@ -17,7 +17,8 @@
         "dotenv": "^16.4.0",
         "fastify": "^4.26.0",
         "pino": "^8.19.0",
-        "qrcode-terminal": "^0.12.0"
+        "qrcode-terminal": "^0.12.0",
+        "debug": "^4.3.4"
     },
     "devDependencies": {
         "@types/node": "^20.0.0",
