--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,7 @@ services:
       - WEBHOOK_URL=https://main.d2in5shy58lp10.amplifyapp.com/api/webhooks/discord
       - PORT=3002
       - WEBHOOK_SECRET=${WEBHOOK_SECRET}
+      - AGENT_ID=${AGENT_ID}
       # DISCORD_TOKEN will be loaded from .env file on host
       - DISCORD_TOKEN=${DISCORD_TOKEN}
     depends_on:
