--- a/services/discord/package.json
+++ b/services/discord/package.json
@@ -21,6 +21,7 @@
         "debug": "^4.3.4"
     },
     "devDependencies": {
+        "@types/debug": "^4.1.12",
         "@types/node": "^20.0.0",
         "ts-node": "^10.9.0",
         "typescript": "^5.0.0"
