feat: optimize swarm - reduce DB queries by 80% + fix Lena/Anaïs profiles
- Remove redundant AgentProfile queries from swarm nodes

- Pass profile via SwarmState instead of re-querying

- Fix Lena (English, USA, 14yo) and Anaïs (French, France, 14yo) profiles

- Add platform excuses (only WhatsApp/Discord, no other apps)

- Add timing context with date/time for agents

--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,9 @@ BAILEYS_LOG_ENDPOINT="http://your-ec2-ip:3001"
 AUTH_TOKEN="secret"
 # Webhook secret for security
 WEBHOOK_SECRET="your_webhook_secret"
+
+# ------------------------------
+# Discord Service (for replies)
+# ------------------------------
+# URL of the Discord service container (e.g., http://your-ec2-ip:3002)
+DISCORD_SERVICE_URL="http://localhost:3002"
