fix: force prisma client regeneration on build

--- a/amplify.yml
+++ b/amplify.yml
@@ -8,6 +8,7 @@ frontend:
       commands:
         - env | grep -e DB_ -e NEXT_ -e WAHA_ -e AI_ -e ANTHROPIC_ -e VENICE_ -e ELEVENLABS_ -e AUTH_ -e WEBHOOK_ -e DATABASE_ -e DIRECT_ >> .env.production
         - cat .env.production > .env
+        - rm -rf node_modules/.prisma
         - npx prisma generate
         - npx prisma db push --accept-data-loss
         - npm run build
