fix: use prisma migrate deploy instead of db push
- db push doesn't run SQL migration files

- migrate deploy properly applies all pending migrations

- Re-enable isHidden filter now that migration will run

--- a/amplify.yml
+++ b/amplify.yml
@@ -10,7 +10,7 @@ frontend:
         - cat .env.production > .env
         - rm -rf node_modules/.prisma
         - npx prisma generate
-        - npx prisma db push --accept-data-loss
+        - npx prisma migrate deploy
         - npm run build
   artifacts:
     baseDirectory: .next
