--- a/amplify.yml
+++ b/amplify.yml
@@ -8,8 +8,8 @@ frontend:
       commands:
         - env | grep -e DB_ -e NEXT_ -e WAHA_ -e AI_ -e ANTHROPIC_ -e VENICE_ -e ELEVENLABS_ -e AUTH_ -e WEBHOOK_ -e DATABASE_ -e DIRECT_ >> .env.production
         - cat .env.production > .env
-        - rm -rf node_modules/.prisma
-        - npx prisma generate
+        - rm -rf node_modules/.prisma node_modules/@prisma/client
+        - npx prisma generate --no-engine
         - npx prisma migrate deploy
         - npm run build
   artifacts:
