--- a/amplify.yml
+++ b/amplify.yml
@@ -3,14 +3,14 @@ frontend:
   phases:
     preBuild:
       commands:
+        # postinstall will run prisma generate automatically after npm ci
         - npm ci --legacy-peer-deps
-        - npx prisma generate
     build:
       commands:
         - env | grep -e DB_ -e NEXT_ -e WAHA_ -e AI_ -e ANTHROPIC_ -e VENICE_ -e ELEVENLABS_ -e AUTH_ -e WEBHOOK_ -e DATABASE_ -e DIRECT_ >> .env.production
         - cat .env.production > .env
         - rm -rf .next
-        - npx prisma migrate deploy || echo "Migration may have already been applied"
+        - npx prisma migrate deploy
         - npm run build
   artifacts:
     baseDirectory: .next
@@ -19,5 +19,3 @@ frontend:
   cache:
     paths:
       - node_modules/**/*
-      - '!node_modules/.prisma/**/*'
-      - '!node_modules/@prisma/client/**/*'
