--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.2.15",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@radix-ui/react-progress": "^1.1.4",
     "@supabase/supabase-js": "^2.90.1",
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
