Enhance: Structured cron logging with timestamps and cleaned output

--- a/services/cron/Dockerfile
+++ b/services/cron/Dockerfile
@@ -2,6 +2,7 @@ FROM alpine:3.18
 RUN apk add --no-cache curl
 
 COPY crontab /etc/crontabs/root
+COPY run-job.sh /run-job.sh
 
 # Create entrypoint script to fix CRLF and permissions at runtime (handling volume mounts)
 RUN printf '#!/bin/sh\n\
@@ -10,6 +11,11 @@ RUN printf '#!/bin/sh\n\
     cat /etc/crontabs/root | tr -d "\\r" > /etc/crontabs-clean/root\n\
     echo "" >> /etc/crontabs-clean/root\n\
     chmod 0644 /etc/crontabs-clean/root\n\
+    \n\
+    # Fix CRLF for run-job.sh and make executable\n\
+    cat /run-job.sh | tr -d "\\r" > /usr/local/bin/run-job.sh\n\
+    chmod +x /usr/local/bin/run-job.sh\n\
+    \n\
     # Run crond using the cleaned crontab directory\n\
     exec crond -f -c /etc/crontabs-clean -L /dev/stdout\n\
     ' > /entrypoint.sh && chmod +x /entrypoint.sh
