--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
     "prisma": "^5.22.0",
+    "ssh2": "^1.17.0",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
     "tw-animate-css": "^1.4.0",
