--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ WAHA_SESSION="default"
 # ------------------------------
 # Venice
 VENICE_API_KEY=""
-VENICE_MODEL="venice-uncensored"
+VENICE_MODEL="google-gemma-3-27b-it"
 
 # Anthropic
 ANTHROPIC_API_KEY=""
