--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "form-data": "^4.0.5",
     "framer-motion": "^12.27.5",
     "fuse.js": "^7.1.0",
+    "happy-coder": "^0.13.0",
     "jspdf": "^4.0.0",
     "jspdf-autotable": "^5.0.7",
     "lucide-react": "^0.562.0",
