refactor: remove anthropic code paths and config

--- a/amplify.yml
+++ b/amplify.yml
@@ -7,7 +7,7 @@ frontend:
         - npm ci --legacy-peer-deps
     build:
       commands:
-        - env | grep -e DB_ -e NEXT_ -e WAHA_ -e AI_ -e ANTHROPIC_ -e VENICE_ -e ELEVENLABS_ -e AUTH_ -e WEBHOOK_ -e DATABASE_ -e DIRECT_ >> .env.production
+        - env | grep -e DB_ -e NEXT_ -e WAHA_ -e AI_ -e VENICE_ -e ELEVENLABS_ -e AUTH_ -e WEBHOOK_ -e DATABASE_ -e DIRECT_ >> .env.production
         - cat .env.production > .env
         - rm -rf .next
         - npx prisma migrate deploy
