--- a/.env.example
+++ b/.env.example
@@ -13,11 +13,7 @@ WAHA_SESSION="default"
 VENICE_API_KEY=""
 VENICE_MODEL="google-gemma-3-27b-it"
 
-# Anthropic
-ANTHROPIC_API_KEY=""
-ANTHROPIC_MODEL="claude-3-haiku-20240307"
-
-# Active Provider (venice or anthropic)
+# Active Provider (venice)
 AI_PROVIDER="venice"
 
 # ------------------------------
